--- a/package.json
+++ b/package.json
@@ -15,11 +15,19 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@fullcalendar/bootstrap5": "^6.1.15",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "crypto-js": "^4.2.0",
     "formik": "^2.4.5",
+    "import": "^0.0.6",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
@@ -29,6 +37,7 @@
     "react-router-dom": "^6.22.2",
     "recoil": "^0.7.7",
     "socket.io-client": "^4.7.5",
+    "tui-calendar": "^1.15.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
