--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap-icons": "^1.11.3",
     "crypto-js": "^4.2.0",
     "formik": "^2.4.5",
+    "fullcalendar": "^6.1.15",
     "import": "^0.0.6",
     "moment": "^2.30.1",
     "react": "^18.2.0",
